Ensure the ScrollView is scrolled to reveal any control that acquires focus.

Bug: 790555
Change-Id: Id64b81c88908adce55d47537ddd0744bfdefc857