ui/views/controls/scroll_view.h
@@ -12,6 +12,7 @@
 #include "base/macros.h"
 #include "ui/native_theme/native_theme.h"
 #include "ui/views/controls/scrollbar/scroll_bar.h"
+#include "ui/views/focus/focus_manager.h"
 
 namespace gfx {
 class ScrollOffset;
@@ -38,7 +39,9 @@ class Separator;
 //
 /////////////////////////////////////////////////////////////////////////////
 
-class VIEWS_EXPORT ScrollView : public View, public ScrollBarController {
+class VIEWS_EXPORT ScrollView : public View,
+                                public ScrollBarController,
+                                public FocusChangeListener {
  public:
   static const char kViewClassName[];
 
@@ -124,6 +127,11 @@ class VIEWS_EXPORT ScrollView : public View, public ScrollBarController {
                          bool is_page,
                          bool is_positive) override;
 
+ protected:
+  // View overrides:
+  void AddedToWidget() override;
+  void RemovedFromWidget() override;
+
  private:
   friend class test::ScrollViewTestApi;
 
@@ -133,6 +141,13 @@ class VIEWS_EXPORT ScrollView : public View, public ScrollBarController {
     SkColor color;
     ui::NativeTheme::ColorId color_id;
   };
+
+  // FocusChangeListener overrides:
+  void OnWillChangeFocus(View* focused_before, View* focused_now) override;
+  void OnDidChangeFocus(View* focused_before, View* focused_now) override;
+
+  void AddFocusChangeListener();
+  void RemoveFocusChangeListener();
 
   // Forces |contents_viewport_| to have a Layer (assuming it doesn't already).
   void EnableViewPortLayer();
